--- a/index.html
+++ b/index.html
@@ -1,50 +1,119 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+
 <head>
-<title>HTML Tutorial</title>
-<style>
-@media print {
-    body{
-        width: 21cm;
-        height: 29.7cm;
-       /* margin: 30mm 45mm 30mm 45mm;*/
-   } 
-}
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <style>
+            body {
+                font-size: 12px;
+            }
 
-</style>
+            @media print {
+                body {
+                    font-size: 10px;
+                }
+            }
+            
+        </style>
 </head>
+
 <body>
+    <div class="header">
+        <table class="table-bordered border-primary w-100">
+            <tr>
+                <td><img src="image/logo.png" width="230"></td>
+                <td>Vikas Center, S V Road, BEST Colony, Santacruz West,
+                    Mumbai,<br>Maharashtra 400054, India<br>Tel.: 9619495878<br>Email: reservations@autoriders.in
+                </td>
+                <td rowspan="2"><img src="image/qr.jpg" width="230"></td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <ul>
+                        <li>IRN: 1aa7fc6f03c0634f6dc5a646d34b465015beaebd38b0031c6d31220ea955a0fa</li>
+                        <li>ACK NO: 122420151191762</li>
+                        <li>ACK DATE: 12/02/2024 17:51</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td style="text-align:center" colspan="3">
+                    TAX INVOICE
+                </td>
+            </tr>
+        </table>
+    </div>
 
-<div class="header">
-<table border="1" width="100%" style="border-collapse: collapse">
-<tr>
-	<td><img src="image/logo.png" width="230"></td>
-	<td>Vikas Center, S V Road, BEST Colony, Santacruz West, 
-	Mumbai,<br>Maharashtra 400054, India<br>Tel.: 9619495878<br>Email: reservations@autoriders.in
-	</td>
-	<td rowspan="2"><img src="image/qr.jpg" width="230"></td>
-</tr>
-<tr>
-	<td colspan="2" >
-	<ul>
-		<li>IRN: 1aa7fc6f03c0634f6dc5a646d34b465015beaebd38b0031c6d31220ea955a0fa</li>
-		<li>ACK NO: 122420151191762</li>
-		<li>ACK DATE: 12/02/2024 17:51</li>
-	</ul>
-	</td>
-</tr>
+    <div class="client-details">
+        <table class="table-bordered border-primary w-100">
+            <tr>
+                <td colspan="3">SHELL INDIA MARKETS PVT LTD</td>
+                <td colspan="3">*Original for recipient</td>
+            </tr>
+            <tr>
+                <td colspan="3">Plot No.C-60, Trents House, Bandra Kurla Complex, Bandra, Mumbai 40051</td>
+                <td colspan="3">Invoice Number:MUM/C/2402/00225</td>
+            </tr>
+            <tr>
+                <td>GSTIN :27AAICS1404P1Z3</td>
+                <td>State: Maharashtra</td>
+                <td>State Code: 27</td>
+                <td>Place Of Supply: Maharashtra</td>
+                <td>PAN No:AAICS1404P</td>
+                <td>Invoice Date :01-02-2024</td>
+            </tr>
+        </table>
+    </div>
+    <div class="item-list">
+        <table class="table-bordered border-primary w-100">
+           <thead>
+            <tr>
+                <td>SR</td>
+                <td>DESCRIPTION</td>
+                <td>RATE</td>
+                <td>QTY</td>
+                <td>AMOUNT</td>
+            </tr>
+           </thead>
+           <tbody><tr>
+            <td>1</td>
+            <td>MUM/CDC/2401/01250 | Date: 30/01/2024</td>
+            <td>1950.00</td>
+            <td>1</td>
+            <td>Toll Charges</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>Extra Km</td>
+            <td>0.00</td>
+            <td>0 Km</td>
+            <td>0.00</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>Extra Hours</td>
+            <td>0.00</td>
+            <td>0.00 Hr</td>
+            <td>0.00</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>Toll Charges</td>
+            <td></td>
+            <td></td>
+            <td>90.00</td>
+        </tr>
+    </tbody>
+        </table>
+    </div>
 
-<tr >
-	<td style="text-align:center" colspan="3">
-		TAX INVOICE
-	</td>
-</tr>
-</table>
-</div>
-
-
-<script>
-//window.print()
-</script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
