--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                 <td>AMOUNT</td>
             </tr>
            </thead>
-           <tbody><tr>
+           <tbody>
+            <tr>
             <td>1</td>
             <td>MUM/CDC/2401/01250 | Date: 30/01/2024</td>
             <td>1950.00</td>
@@ -108,6 +109,57 @@
             <td>90.00</td>
         </tr>
     </tbody>
+    <tfoot>
+        <tr>
+            <td></td>
+            <td></td>
+            <td>TAXABLE SUB TOTAL</td>
+            <td></td>
+            <td>2400.00</td>
+        </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td>SGST (2.50%)</td>
+        <td></td>
+        <td>51.00</td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td>IGST (5.00%)</td>
+        <td></td>
+        <td>51.00</td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td>CGST (2.50%)</td>
+        <td></td>
+        <td>0.00</td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td>TOTAL TAX</td>
+        <td></td>
+        <td>102.00</td>
+    </tr>
+    <tr>
+        <td>In Words: Rupees Two Thousand One Hundred Forty Two Only</td>
+        <td></td>
+        <td>TOTAL</td>
+        <td></td>
+        <td>2142.00</td>
+    </tr>
+    <tr>
+        <td>GSTIN: 27AAACA4897J1ZA</td>
+        <td>HSN./SAC NO: 996601</td>
+        <td>PAN NO: AAACA4897J</td>
+        <td>CIN: L70120MH1985PLC037017</td>
+        <td>LUT: AD270323025994Y-16/03/2023</td>
+    </tr>
+</tfoot>
         </table>
     </div>
 
