--- a/index.html
+++ b/index.html
@@ -326,13 +326,291 @@
                     <td>30-Jan-2024 05:28</td>
                     <td>4, Tower 4, Sea Woods Estates NRI Complex Road, NRI Complex Phase 2, Seawoods Estates, Nerul West, Navi Mumbai, Maharashtra. 96 m from Metropolis Diagnostic & Healthcare, Pin-400706 (India)</td>
                 </tr>
+                <tr>
+                    <td >MUM/DSN/2401/02855</td>
+                    <td>30-Jan-2024 05:28</td>
+                    <td>4, Tower 4, Sea Woods Estates NRI Complex Road, NRI Complex Phase 2, Seawoods Estates, Nerul West, Navi Mumbai, Maharashtra. 96 m from Metropolis Diagnostic & Healthcare, Pin-400706 (India)</td>
+                </tr>
+                <tr>
+                    <td >MUM/DSN/2401/02855</td>
+                    <td>30-Jan-2024 05:28</td>
+                    <td>4, Tower 4, Sea Woods Estates NRI Complex Road, NRI Complex Phase 2, Seawoods Estates, Nerul West, Navi Mumbai, Maharashtra. 96 m from Metropolis Diagnostic & Healthcare, Pin-400706 (India)</td>
+                </tr>
+                <tr>
+                    <td >MUM/DSN/2401/02855</td>
+                    <td>30-Jan-2024 05:28</td>
+                    <td>4, Tower 4, Sea Woods Estates NRI Complex Road, NRI Complex Phase 2, Seawoods Estates, Nerul West, Navi Mumbai, Maharashtra. 96 m from Metropolis Diagnostic & Healthcare, Pin-400706 (India)</td>
+                </tr>
+                <tr>
+                    <td >MUM/DSN/2401/02855</td>
+                    <td>30-Jan-2024 05:28</td>
+                    <td>4, Tower 4, Sea Woods Estates NRI Complex Road, NRI Complex Phase 2, Seawoods Estates, Nerul West, Navi Mumbai, Maharashtra. 96 m from Metropolis Diagnostic & Healthcare, Pin-400706 (India)</td>
+                </tr>
+                <tr>
+                    <td >MUM/DSN/2401/02855</td>
+                    <td>30-Jan-2024 05:28</td>
+                    <td>4, Tower 4, Sea Woods Estates NRI Complex Road, NRI Complex Phase 2, Seawoods Estates, Nerul West, Navi Mumbai, Maharashtra. 96 m from Metropolis Diagnostic & Healthcare, Pin-400706 (India)</td>
+                </tr>
             </tbody>
         </table>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+
+
+
+    <div class="invoice_summary mt-4">
+        <table class="table-bordered border-primary w-100">
+            <thead>
+                <tr>
+                    <td colspan="15" class=" text-center">INVOICE SUMMARY</td>
+                </tr>
+                <tr>
+                    <td>Sr No.</td>
+                    <td>Booking Ref No</td>
+                    <td>Duty Slip No</td>
+                    <td>Opening Date</td>
+                    <td>Closing Date</td>
+                    <td>Opening Time</td>
+                    <td>Reporting Time</td>
+                    <td>Release Time</td>
+                    <td>Closing Time</td>
+                    <td>Total Chargeable Time</td>
+                    <td>Garage Op. Kms</td>
+                    <td>Reporting Kms</td>
+                    <td>Release Kms</td>
+                    <td>Garage Clo. Kms</td>
+                    <td>Total
+                        chargea
+                        ble kms</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>MUM/CDC/2401/0125</td>
+                    <td>MUM/DSN/2401/02855</td>
+                    <td>30/01/2024</td>
+                    <td>30/01/2024</td>
+                    <td>05:25</td>
+                    <td>05:50</td>
+                    <td>07:30</td>
+                    <td>07:40</td>
+                    <td>1:40</td>
+                    <td>180686</td>
+                    <td>180697</td>
+                    <td>180727</td>
+                    <td>180730</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>MUM/CDC/2401/0125</td>
+                    <td>MUM/DSN/2401/02855</td>
+                    <td>30/01/2024</td>
+                    <td>30/01/2024</td>
+                    <td>05:25</td>
+                    <td>05:50</td>
+                    <td>07:30</td>
+                    <td>07:40</td>
+                    <td>1:40</td>
+                    <td>180686</td>
+                    <td>180697</td>
+                    <td>180727</td>
+                    <td>180730</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>MUM/CDC/2401/0125</td>
+                    <td>MUM/DSN/2401/02855</td>
+                    <td>30/01/2024</td>
+                    <td>30/01/2024</td>
+                    <td>05:25</td>
+                    <td>05:50</td>
+                    <td>07:30</td>
+                    <td>07:40</td>
+                    <td>1:40</td>
+                    <td>180686</td>
+                    <td>180697</td>
+                    <td>180727</td>
+                    <td>180730</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>MUM/CDC/2401/0125</td>
+                    <td>MUM/DSN/2401/02855</td>
+                    <td>30/01/2024</td>
+                    <td>30/01/2024</td>
+                    <td>05:25</td>
+                    <td>05:50</td>
+                    <td>07:30</td>
+                    <td>07:40</td>
+                    <td>1:40</td>
+                    <td>180686</td>
+                    <td>180697</td>
+                    <td>180727</td>
+                    <td>180730</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>MUM/CDC/2401/0125</td>
+                    <td>MUM/DSN/2401/02855</td>
+                    <td>30/01/2024</td>
+                    <td>30/01/2024</td>
+                    <td>05:25</td>
+                    <td>05:50</td>
+                    <td>07:30</td>
+                    <td>07:40</td>
+                    <td>1:40</td>
+                    <td>180686</td>
+                    <td>180697</td>
+                    <td>180727</td>
+                    <td>180730</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td>MUM/CDC/2401/0125</td>
+                    <td>MUM/DSN/2401/02855</td>
+                    <td>30/01/2024</td>
+                    <td>30/01/2024</td>
+                    <td>05:25</td>
+                    <td>05:50</td>
+                    <td>07:30</td>
+                    <td>07:40</td>
+                    <td>1:40</td>
+                    <td>180686</td>
+                    <td>180697</td>
+                    <td>180727</td>
+                    <td>180730</td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="parking_slip mt-3 ">
+        <div class="d-flex justify-content-between border border-2">
+            <div>BOOKING REFERENCE NO:. #41548ACHDUSDKL</div>
+            <div>PARKING SLIPS</div>
+        </div>
+        <div class="container-fluid mt-3">
+            <div class="row">
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+                <div class="col-md-2 col-sm-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU" class="img-fluid py-2">
+                </div>
+            </div>
+        </div>
+    </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
