--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,7 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-
 <body>
     <div class="header">
         <table class="w-100">
@@ -594,100 +592,13 @@
                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU"
                             class="img-fluid py-2">
                     </div>
-
-                    <div class="col-md-2 col-sm-2 parking_slip_image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU"
-                            class="img-fluid py-2">
-                    </div>
-                    <div class="col-md-2 col-sm-2 parking_slip_image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU"
-                            class="img-fluid py-2">
-                    </div>
-                    <div class="col-md-2 col-sm-2 parking_slip_image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU"
-                            class="img-fluid py-2">
-                    </div>
-                    <div class="col-md-2 col-sm-2 parking_slip_image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU"
-                            class="img-fluid py-2">
-                    </div>
-
-                    <div class="col-md-2 col-sm-2 parking_slip_image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU"
-                            class="img-fluid py-2">
-                    </div>
-                    <div class="col-md-2 col-sm-2 parking_slip_image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU"
-                            class="img-fluid py-2">
-                    </div>
-
-                    <div class="col-md-2 col-sm-2 parking_slip_image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU"
-                            class="img-fluid py-2">
-                    </div>
-                    <div class="col-md-2 col-sm-2 parking_slip_image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU"
-                            class="img-fluid py-2">
-                    </div>
-                    <div class="col-md-2 col-sm-2 parking_slip_image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU"
-                            class="img-fluid py-2">
-                    </div>
-                    <div class="col-md-2 col-sm-2 parking_slip_image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU"
-                            class="img-fluid py-2">
-                    </div>
-
-                    <div class="col-md-2 col-sm-2 parking_slip_image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU"
-                            class="img-fluid py-2">
-                    </div>
-                    <div class="col-md-2 col-sm-2 parking_slip_image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU"
-                            class="img-fluid py-2">
-                    </div>
-
-                    <div class="col-md-2 col-sm-2 parking_slip_image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU"
-                            class="img-fluid py-2">
-                    </div>
-                    <div class="col-md-2 col-sm-2 parking_slip_image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU"
-                            class="img-fluid py-2">
-                    </div>
-                    <div class="col-md-2 col-sm-2 parking_slip_image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU"
-                            class="img-fluid py-2">
-                    </div>
-                    <div class="col-md-2 col-sm-2 parking_slip_image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU"
-                            class="img-fluid py-2">
-                    </div>
-
-                    <div class="col-md-2 col-sm-2 parking_slip_image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU"
-                            class="img-fluid py-2">
-                    </div>
-                    <div class="col-md-2 col-sm-2 parking_slip_image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU"
-                            class="img-fluid py-2">
-                    </div>
-
-                    <div class="col-md-2 col-sm-2 parking_slip_image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU"
-                            class="img-fluid py-2">
-                    </div>
-                    <div class="col-md-2 col-sm-2 parking_slip_image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaHGnAZa4WfJN3coJ46Ete_hmE9EVvNM82Xg&usqp=CAU"
-                            class="img-fluid py-2">
-                    </div>
                 </div>
             </div>
         </div>
-
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+       
+    </script>
 </body>
-
 </html>
