--- a/NewDesign/index.html
+++ b/NewDesign/index.html
@@ -285,12 +285,145 @@
     </div>
 
     <div class="duty_slip">
-      <div class="card">
+      <div class="card mb-3 mt-3 rounded-0">
         <h5 class="card-header rounded-0">Duty #42053096-1</h5>
         <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+
+          <table class="table w-50">
+            <tr>
+              <td>Date</td>
+              <td>07-06-2022</td>
+            </tr>
+            <tr>
+              <td>Vehicle Group </td>
+              <td>Crysta 6 Seater Bucket</td>
+            </tr>
+            <tr>
+              <td>Vehicle</td>
+              <td>Crysta Bucket Seat GJ05AV5552
+              </td>
+            </tr>
+            <tr>
+              <td>Driver</td>
+              <td>Hetalbhai</td>
+            </tr>
+            <tr>
+              <td>Passengers </td>
+              <td>Mr Sardar Imran Khan</td>
+            </tr>
+            <tr>
+              <td>Reporting Address </td>
+              <td>Airport, Surat</td>
+            </tr>
+            <tr>
+              <td>Drop Address</td>
+              <td>Hotel</td>
+            </tr>
+            <tr>
+              <td>Scanned Dutyslip </td>
+              <td><a href="">View Duty Slip</a></td>
+            </tr>
+          </table>
+
+          <table class="table-bordered table w-100 mt-3">
+            <thead>
+              <tr>
+                <th></th>
+                <th>Start</th>
+                <th>End</th>
+                <th>Total</th>
+                <th>Extra</th>
+              </tr>
+            </thead>
+            <tbody>
+            <tr c>
+              <td>Time</td>
+              <td>11:00</td>
+              <td>12:00</td>
+              <td>1</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td>Km</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+            </tbody>
+          </table>
+          <p class="card-text">Customer signature not available.</p>
+        </div>
+      </div>
+
+      <div class="card mb-3 mt-3 rounded-0">
+        <h5 class="card-header rounded-0">Duty #42053096-2</h5>
+        <div class="card-body">
+
+          <table class="table w-50 ">
+            <tr>
+              <td>Date</td>
+              <td>07-06-2022</td>
+            </tr>
+            <tr>
+              <td>Vehicle Group </td>
+              <td>Crysta 6 Seater Bucket</td>
+            </tr>
+            <tr>
+              <td>Vehicle</td>
+              <td>Crysta Bucket Seat GJ05AV5552
+              </td>
+            </tr>
+            <tr>
+              <td>Driver</td>
+              <td>Hetalbhai</td>
+            </tr>
+            <tr>
+              <td>Passengers </td>
+              <td>Mr Sardar Imran Khan</td>
+            </tr>
+            <tr>
+              <td>Reporting Address </td>
+              <td>Airport, Surat</td>
+            </tr>
+            <tr>
+              <td>Drop Address</td>
+              <td>Hotel</td>
+            </tr>
+            <tr>
+              <td>Scanned Dutyslip </td>
+              <td><a href="">View Duty Slip</a></td>
+            </tr>
+          </table>
+
+          <table class="table-bordered table w-100 mt-3">
+            <thead>
+              <tr>
+                <th></th>
+                <th>Start</th>
+                <th>End</th>
+                <th>Total</th>
+                <th>Extra</th>
+              </tr>
+            </thead>
+            <tbody>
+            <tr>
+              <td>Time</td>
+              <td>11:00</td>
+              <td>12:00</td>
+              <td>1</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td>Km</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+            </tbody>
+          </table>
+          <p class="card-text">Customer signature not available.</p>
         </div>
       </div>
     </div>
