--- a/MedoraInvoice/index.html
+++ b/MedoraInvoice/index.html
@@ -242,46 +242,45 @@
     </table>
 
 
-    <div class="payment-tax-details container-fluid mt-3">
-   <table>
-    <tr>
-      <td style="width: 700px;">
-        Taxes: IGST 5% - 5%: ₹ 380.00
-        <ul style="padding: 0;list-style: none;" class="append-hash">
-          <li>Subject to Ahmedabad jurisdiction.</li>
-          <li>Without original invoice no refund is permissible.</li>
-          <li>Interest @ 24% will be charged on delayed payment.</li>
-          <li>Cheque to be drawn in favour of "Medora Travel Services".</li>
-          <li>Kindly check all details carefully to avoid un-necessary complications.</li>
-          <li>If payment will be not made by Company/ Sponsor than responsibility to make payment to the user/guest.</li>
-          <li>Invoice once received will be amended only within five days of receiving the invoice. Any changes after that will not be entertained.</li>
-          <li>Notification No. 22-2019 dated 30th September 2019. Serial No 15. It will be the responsibility of the Body corporate to pay GST from 1st October 2019.</li>
-          <li>PAN No ACSPM2354B</li>
-          <li>Proprietorship Firm, Proprietor Name: Mr Oorvaksh R Medora</li>
-          <li>MSME UAN Reg. No. GJ01E0014224</li>
-          <li>Type of Enterprise: Small Services</li>
-          <li>UDYAM Reg. No. UDYAM-GJ-01-0056180</li>
-          <li>Type of Enterprise: Small Services</li>
-          <li>From 1st March 2020, we shall be sending only soft copy invoice via email. In case anyone requires a hard copy they will have to request for the same.</li>
-          <li>Google Payment Mobile No +91 94266 33859, After making payment please send the payment details on accounts@autoriders.in</li>
-        </ul>
-        <p>GSTIN: 24ACSPM2354B2ZR | SAC/HSN/Accounting code: 9966 | PAN: ACSPM2354B</p>
-        <h6>Bank Details:</h6>
-        <ul class="bank_details">
-          <li>Account No.: 08252000002262</li>
-          <li>Bank: Kotak Mahindra Bank (Ahmedabad - Drive In Road Branch) | IFSC: KKBK0000825</li>
-          <li>Please issue cheques in name of "Medora Travel Services".</li>
-          <li>Pay using UPI at medora@kotak</li>
-        </ul>
+    <div class="payment-tax-details container-fluid mt-2">
+   <div class="invoice_details d-flex justify-content-between">
 
-      </td>
-      <td class="autorider-stamp" >
-        For Autoriders  International Ltd<br>
-        <img src="./invoice/image/logo.png" width="200"><br>
-        Authorized signatory
-      </td>
-    </tr>
-   </table>
+    <div  style="width: 700px;">
+      <span>Taxes: IGST 5% - 5%: ₹ 380.00</span>
+      <ul style="padding: 0; list-style: none;" class="append-hash">
+        <li>Subject to Ahmedabad jurisdiction.</li>
+        <li>Without original invoice no refund is permissible.</li>
+        <li>Interest @ 24% will be charged on delayed payment.</li>
+        <li>Cheque to be drawn in favour of "Autoriders Travel Services".</li>
+        <li>Kindly check all details carefully to avoid un-necessary complications.</li>
+        <li>If payment will be not made by Company/ Sponsor than responsibility to make payment to the user/guest.</li>
+        <li>Invoice once received will be amended only within five days of receiving the invoice. Any changes after that will not be entertained.</li>
+        <li>Notification No. 22-2019 dated 30th September 2019. Serial No 15. It will be the responsibility of the Body corporate to pay GST from 1st October 2019.</li>
+        <li>PAN No ACSPM2354B</li>
+        <li>Proprietorship Firm, Proprietor Name: Mr Oorvaksh R Autoriders</li>
+        <li>MSME UAN Reg. No. GJ01E0014224</li>
+        <li>Type of Enterprise: Small Services</li>
+        <li>UDYAM Reg. No. UDYAM-GJ-01-0056180</li>
+        <li>Type of Enterprise: Small Services</li>
+        <li>From 1st March 2020, we shall be sending only soft copy invoice via email. In case anyone requires a hard copy they will have to request for the same.</li>
+        <li>Google Payment Mobile No +91 94266 33859, After making payment please send the payment details on accounts@autoriders.in</li>
+      </ul>
+      <div>GSTIN: 24ACSPM2354B2ZR | SAC/HSN/Accounting code: 9966 | PAN: ACSPM2354B</div>
+      <h6>Bank Details:</h6>
+      <ul class="bank_details" style="list-style: none;padding: 5px;">
+        <li><span class="font-bold">Account No.:</span> 08252000002262</li>
+        <li><span class="font-bold">Bank:</span> Kotak Mahindra Bank (Ahmedabad - Drive In Road Branch) | IFSC: KKBK0000825</li>
+        <li>Please issue cheques in name of "Autoriders Travel Services".</li>
+        <li>Pay using UPI at <span class="font-bold">Autoriders@kotak</span></li>
+      </ul>
+    </div>
+
+    <div class="autorider-stamp">
+      For Autoriders  International Ltd<br>
+      <img src="./invoice/image/Signature.png" ><br>
+      Authorized signatory
+    </div>
+  </div>
     </div>
 
     <div class="duty_slip">
@@ -289,43 +288,63 @@
         <h5 class="card-header rounded-0">Duty #42053096-1</h5>
         <div class="card-body">
 
-          <table class="table w-50">
-            <tr>
-              <td>Date</td>
-              <td>07-06-2022</td>
-            </tr>
-            <tr>
-              <td>Vehicle Group </td>
-              <td>Crysta 6 Seater Bucket</td>
-            </tr>
-            <tr>
-              <td>Vehicle</td>
-              <td>Crysta Bucket Seat GJ05AV5552
-              </td>
-            </tr>
-            <tr>
-              <td>Driver</td>
-              <td>Hetalbhai</td>
-            </tr>
-            <tr>
-              <td>Passengers </td>
-              <td>Mr Sardar Imran Khan</td>
-            </tr>
-            <tr>
-              <td>Reporting Address </td>
-              <td>Airport, Surat</td>
-            </tr>
-            <tr>
-              <td>Drop Address</td>
-              <td>Hotel</td>
-            </tr>
-            <tr>
-              <td>Scanned Dutyslip </td>
-              <td><a href="">View Duty Slip</a></td>
-            </tr>
-          </table>
+          <div class="d-flex justify-content-between">
+            <div style="width: 600px;">
+              <table class="table table-sm">
+                <tr>
+                  <td>Date</td>
+                  <td>07-06-2022</td>
+                </tr>
+                <tr>
+                  <td>Vehicle Group </td>
+                  <td>Crysta 6 Seater Bucket</td>
+                </tr>
+                <tr>
+                  <td>Vehicle</td>
+                  <td>Crysta Bucket Seat GJ05AV5552
+                  </td>
+                </tr>
+                <tr>
+                  <td>Cost Center</td>
+                  <td> MH47BK5665 / 65055</td>
+                </tr>
+                <tr>
+                  <td>Duty Type</td>
+                  <td>08 Hrs./80 Kms</td>
+                </tr>
+                <tr>
+                  <td>Service City</td>
+                  <td>Mumbai</td>
+                </tr>
+                <tr>
+                  <td>Driver</td>
+                  <td>Hetalbhai</td>
+                </tr>
+                <tr>
+                  <td>Passengers</td>
+                  <td>Mr Sardar Imran Khan</td>
+                </tr>
+                <tr>
+                  <td>Reporting Address </td>
+                  <td>Airport, Surat</td>
+                </tr>
+                <tr>
+                  <td>Drop Address</td>
+                  <td>Hotel</td>
+                </tr>
+              
+                <tr>
+                  <td>Scanned Dutyslip </td>
+                  <td><a href="" class="text-decoration-none">View Duty Slip</a></td>
+                </tr>
+              </table>
+            </div>
+            <div style="width: 400px;">
+              <img src="./invoice/image/Map.PNG" class="w-100" alt="Signature">
+            </div>
+          </div>
 
-          <table class="table-bordered table w-100 mt-3">
+          <table class="table-bordered table-sm table w-100 mt-3">
             <thead>
               <tr>
                 <th></th>
@@ -352,80 +371,12 @@
             </tr>
             </tbody>
           </table>
-          <p class="card-text">Customer signature not available.</p>
+          <!-- <p class="card-text">Customer signature not available.</p> -->
+          <img src="./invoice/image/Signature.png" class="customer-singature"><br>
+          Customer Signature
         </div>
       </div>
 
-      <div class="card mb-3 mt-3 rounded-0">
-        <h5 class="card-header rounded-0">Duty #42053096-2</h5>
-        <div class="card-body">
-
-          <table class="table w-50 ">
-            <tr>
-              <td>Date</td>
-              <td>07-06-2022</td>
-            </tr>
-            <tr>
-              <td>Vehicle Group </td>
-              <td>Crysta 6 Seater Bucket</td>
-            </tr>
-            <tr>
-              <td>Vehicle</td>
-              <td>Crysta Bucket Seat GJ05AV5552
-              </td>
-            </tr>
-            <tr>
-              <td>Driver</td>
-              <td>Hetalbhai</td>
-            </tr>
-            <tr>
-              <td>Passengers </td>
-              <td>Mr Sardar Imran Khan</td>
-            </tr>
-            <tr>
-              <td>Reporting Address </td>
-              <td>Airport, Surat</td>
-            </tr>
-            <tr>
-              <td>Drop Address</td>
-              <td>Hotel</td>
-            </tr>
-            <tr>
-              <td>Scanned Dutyslip </td>
-              <td><a href="">View Duty Slip</a></td>
-            </tr>
-          </table>
-
-          <table class="table-bordered table w-100 mt-3">
-            <thead>
-              <tr>
-                <th></th>
-                <th>Start</th>
-                <th>End</th>
-                <th>Total</th>
-                <th>Extra</th>
-              </tr>
-            </thead>
-            <tbody>
-            <tr>
-              <td>Time</td>
-              <td>11:00</td>
-              <td>12:00</td>
-              <td>1</td>
-              <td>0</td>
-            </tr>
-            <tr>
-              <td>Km</td>
-              <td>0</td>
-              <td>0</td>
-              <td>0</td>
-              <td>0</td>
-            </tr>
-            </tbody>
-          </table>
-          <p class="card-text">Customer signature not available.</p>
-        </div>
-      </div>
     </div>
 
   </div>
