--- a/MedoraInvoice/index.html
+++ b/MedoraInvoice/index.html
@@ -57,7 +57,51 @@
     </table>
 
 
-    <table class="w-100 mt-3 table-bordered">
+    <table class="w-100 mt-3 table mt-4  items">
+      <thead>
+        <tr>
+          <th>SR.</th>
+          <th>DESCRIPTION</th>
+          <th>RATE</th>
+          <th>QTY</th>
+          <th>AMOUNT</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>MUM/CDC/2403/02729 | Date : 20/03/2024<br>
+            <span class="font-bold">Service City :</span> MUMBAI | <span class="font-bold">Source BR :</span> BLR | 
+            <span class="font-bold">Cost Center :</span> MH47BK5665 / 65055, 2400144023<br>  <span class="font-bold">Vehicle Group:</span> Compact (Etios, Dzire)  <br>
+            <span class="font-bold">Vehicle Registration No:</span> MH43BP3436 <span clas="font-bold">Duty Slip No.:</span>  MUM/DSN/2403/02526 <br>
+            <span class="font-bold">Duty Type:</span> 08 Hrs./80 Kms 
+            <span class="font-bold">Passengers:</span> Mr NARENDRA JAIN
+            <span class="font-bold">Booker Name :</span> Sagar Kudalkar
+          </td>
+          <td>1850.00</td>
+          <td>1</td>
+          <td>1850.00</td>
+        </tr>
+
+        <tr>
+          <td>2</td>
+          <td>MUM/CDC/2403/02729 | Date : 20/03/2024<br>
+            <span class="font-bold">Service City :</span> MUMBAI | <span class="font-bold">Source BR :</span> BLR | 
+            <span class="font-bold">Cost Center :</span> MH47BK5665 / 65055, 2400144023<br>  <span class="font-bold">Vehicle Group:</span> Compact (Etios, Dzire)  <br>
+            <span class="font-bold">Vehicle Registration No:</span> MH43BP3436 <span clas="font-bold">Duty Slip No.:</span>  MUM/DSN/2403/02526 <br>
+            <span class="font-bold">Duty Type:</span> 08 Hrs./80 Kms 
+            <span class="font-bold">Passengers:</span> Mr NARENDRA JAIN 
+            <span class="font-bold">Booker Name :</span> Sagar Kudalkar
+          </td>
+          <td>1850.00</td>
+          <td>1</td>
+          <td>1850.00</td>
+        </tr>
+      </tbody>
+    </table>
+
+
+    <!-- <table class="w-100 mt-3 table-bordered">
       <thead>
         <tr>
           <th>Sr.</th>
@@ -194,10 +238,10 @@
           <td>7,600.00</td>
         </tr>
       </tfoot>
-    </table>
+    </table> -->
 
 
-    <table class="w-100 mt-4  items">
+    <!-- <table class="w-100 mt-4  items">
       <thead class="table-bordered table-border-dark">
         <tr>
           <th>SR.</th>
@@ -218,13 +262,7 @@
           <td>2</td>
           <td>7,600.00</td>
         </tr>
-        <tr class="table-border-light">
-          <td>2</td>
-          <td>Charges</td>
-          <td>0.00</td>
-          <td>1</td>
-          <td>0.00</td>
-        </tr>
+    
       </tbody>
       <tfoot class="table-bordered table-border-dark">
         <tr>
@@ -239,7 +277,7 @@
           <td class="font-bold">7,600.00</td>
         </tr>
       </tfoot>
-    </table>
+    </table> -->
 
 
     <div class="payment-tax-details container-fluid mt-2">
