--- a/MedoraInvoice/index.html
+++ b/MedoraInvoice/index.html
@@ -57,8 +57,8 @@
     </table>
 
 
-    <table class="w-100 mt-3 table mt-4  items">
-      <thead>
+    <table class="w-100 mt-3  mt-4  items  inoice-table">
+      <thead class="table-bordered table-border-dark">
         <tr>
           <th>SR.</th>
           <th>DESCRIPTION</th>
@@ -68,12 +68,14 @@
         </tr>
       </thead>
       <tbody>
+        <!-- One Row Start -->
         <tr>
-          <td>1</td>
+          <td rowspan="3">1</td>
           <td>MUM/CDC/2403/02729 | Date : 20/03/2024<br>
             <span class="font-bold">Service City :</span> MUMBAI | <span class="font-bold">Source BR :</span> BLR | 
-            <span class="font-bold">Cost Center :</span> MH47BK5665 / 65055, 2400144023<br>  <span class="font-bold">Vehicle Group:</span> Compact (Etios, Dzire)  <br>
-            <span class="font-bold">Vehicle Registration No:</span> MH43BP3436 <span clas="font-bold">Duty Slip No.:</span>  MUM/DSN/2403/02526 <br>
+            <span class="font-bold">Cost Center :</span> MH47BK5665 / 65055, 2400144023<br>  
+            <span class="font-bold">Vehicle Group:</span> Compact (Etios, Dzire)  <br> 
+            <span class="font-bold">Vehicle Registration No:</span> MH43BP3436 <span class="font-bold">Duty Slip No.:</span>  MUM/DSN/2403/02526 <br>
             <span class="font-bold">Duty Type:</span> 08 Hrs./80 Kms 
             <span class="font-bold">Passengers:</span> Mr NARENDRA JAIN
             <span class="font-bold">Booker Name :</span> Sagar Kudalkar
@@ -82,22 +84,53 @@
           <td>1</td>
           <td>1850.00</td>
         </tr>
-
         <tr>
-          <td>2</td>
-          <td>MUM/CDC/2403/02729 | Date : 20/03/2024<br>
-            <span class="font-bold">Service City :</span> MUMBAI | <span class="font-bold">Source BR :</span> BLR | 
-            <span class="font-bold">Cost Center :</span> MH47BK5665 / 65055, 2400144023<br>  <span class="font-bold">Vehicle Group:</span> Compact (Etios, Dzire)  <br>
-            <span class="font-bold">Vehicle Registration No:</span> MH43BP3436 <span clas="font-bold">Duty Slip No.:</span>  MUM/DSN/2403/02526 <br>
-            <span class="font-bold">Duty Type:</span> 08 Hrs./80 Kms 
-            <span class="font-bold">Passengers:</span> Mr NARENDRA JAIN 
-            <span class="font-bold">Booker Name :</span> Sagar Kudalkar
-          </td>
-          <td>1850.00</td>
-          <td>1</td>
-          <td>1850.00</td>
+          <td>Extra Km</td>
+          <td>18.00</td>
+          <td>5 Km</td>
+          <td>90.00</td>
         </tr>
+        <tr>
+          <td>Extra Hours</td>
+          <td>125.00</td>
+          <td>5.00 Hr</td>
+          <td>625.00</td>
+        </tr>
+    <!-- One Row End -->
       </tbody>
+      <tfoot class="table-border-dark">
+        <tr class="border-bottom border-top ">
+          <td></td>
+          <td></td>
+          <td colspan="2" class="font-bold">TAXABLE SUB TOTAL</td>
+          <td>24620.00</td>
+        </tr>
+        <tr >
+          <td colspan="3"></td>
+          <td>SGST (2.50%)</td>
+          <td>615.52</td>
+        </tr>
+        <tr>
+          <td colspan="3"></td>
+          <td>CGST (2.50%)</td>
+          <td>615.52</td>
+        </tr>
+        <tr>
+          <td colspan="3"></td>
+          <td>IGST (5.00%)</td>
+          <td>0.00</td>
+        </tr>
+        <tr>
+          <td colspan="3"></td>
+          <td class="font-bold">TOTAL TAX</td>
+          <td>1231.04</td>
+        </tr>
+        <tr class="border-bottom border-top ">
+          <td colspan="3"><span class="font-bold">In Words:</span> Rupees Twenty Five Thousand Eight Hundred Fifty One Only</td>
+          <td class="font-bold">TOTAL</td>
+          <td>25851.00</td>
+        </tr>
+      </tfoot>
     </table>
 
 
