--- a/dutyslipsample2.html
+++ b/dutyslipsample2.html
@@ -98,7 +98,7 @@
                 </table>
             </div>
         </div>
-        <div class="border-top-bottom-thik font-strong text-center mt-3">RENTAL TICKET</div>
+        <h3 class="font-strong text-center mt-3">RENTAL TICKET</h3>
         <!-- <table class="w-100">
             <tr>
                 <td class="w-50"><img src="image/logo.png" width="270"></td>
@@ -128,39 +128,39 @@
             <table class="w-100 border border-black duty-details-tbl">
                 <tr>
                     <td><span class="font-strong">Company Name</span></td>
-                    <td colspan="3">: NATIONAL INVESTMENT AND INFRASTRUCTURE FUND LTD</td>
+                    <td colspan="3">NATIONAL INVESTMENT AND INFRASTRUCTURE FUND LTD</td>
                     <td><span class="font-strong">Reporting time</span></td>
-                    <td>: 4:00 PM</td>
+                    <td>4:00 PM</td>
                    </tr>
                 <tr>
                     <td><span class="font-strong">Model hired</span></td>
-                    <td>: Compact (Etios, Dzire)</td>
+                    <td>Compact (Etios, Dzire)</td>
                     <td><span class="font-strong">Provided</span></td>
-                    <td>: Crysta</td>
+                    <td>Crysta</td>
                     <td><span class="font-strong">Vehicle Reg No</span></td>
-                    <td>: MH02ER7590</td>
+                    <td>MH02ER7590</td>
                    </tr>
                    <tr>
                     <td><span class="font-strong">Name of User</span></td>
-                    <td>: Mr Shubham Gupta</td>
+                    <td>Mr Shubham Gupta</td>
                     <td><span class="font-strong">Mobile no.</span></td>
-                    <td>: 7982512267</td>
+                    <td>7982512267</td>
                     <td><span class="font-strong">Chauffeur</span></td>
-                    <td>: JAIPRAKASH YADAV</td>
+                    <td>JAIPRAKASH YADAV</td>
                    </tr>
                    <tr>
                     <td><span class="font-strong">Car required at</span></td>
                     <!-- Break the address when length is greater than 56 word -->
-                    <td colspan="3">: BANK OF INDIA STAR AVAS, behind Equinox, Ambedkar Nagar,<br> Kurla West, Bandra East</td>
+                    <td colspan="3">BANK OF INDIA STAR AVAS, behind Equinox, Ambedkar Nagar,<br> Kurla West, Bandra East</td>
                     <td><span class="font-strong">Payment mode</span></td>
-                    <td>: Credit</td>
+                    <td>Credit</td>
                    </tr>
             </table>
         </div>
 
 
         <div class="border border-black p-2">
-            <h5 class="text-center font-strong">HELP US TO SERVE YOU BETTER</h5>
+            <h6 class="text-center font-strong">HELP US TO SERVE YOU BETTER</h6>
             <ol class="border border-black py-3" type="1">
                 <li>Please sign the Rental Ticket with Time & Kms reported & released at.</li>
                 <li>Please leave Tel . No/ Mobile No . with Driver to be contacted in emergencies .</li>
@@ -238,7 +238,6 @@
 
         <!-- DUTY SUMMER START -->
         <div class="fast-tag-toll-summary">
-           
             <table class="table-bordered border border-black table-sm table w-100 mt-2 fast-tag-toll-summary-table">
                 <thead>
                     <tr>
