--- a/ReceiptSample.html
+++ b/ReceiptSample.html
@@ -98,8 +98,8 @@
                 </td>
                 <td colspan="1">
                     <ul class="list-unstyled">
-                        <li>No: MUM/RCT/2406/01263</li>
-                        <li>Date: 10/06/2024</li>
+                        <li><span class="font-strong">No:</span> MUM/RCT/2406/01263</li>
+                        <li><span class="font-strong">Date:</span> 10/06/2024</li>
                     </ul>
                 </td>
             </tr>
@@ -110,16 +110,16 @@
     <div class="main-content">
 
         <ul class="list-group list-group-flush">
-            <li class=""><span class="font-strong">Received with thanks from :</span> TATA CONSULTANCY SERVICES LTD - MAHARASHTRA</li>
+            <li class=""><span class="font-strong">Received with thanks from : </span> TATA CONSULTANCY SERVICES LTD - MAHARASHTRA</li>
             <li class=""><span class="font-strong">The sum of : </span> Rs. 22408.9</li>
-            <li class=""><span class="font-strong">The sum of in words :</span> RUPEES TWENTY TWO THOUSAND FOUR HUNDRED EIGHT AND NINETY FOUR PAISE ONLY
+            <li class=""><span class="font-strong">The sum of in words : </span> RUPEES TWENTY TWO THOUSAND FOUR HUNDRED EIGHT AND NINETY FOUR PAISE ONLY
             </li>
-            <li class=""><span class="font-strong">By:</span> NEFT/CHEQUE/CASH - REFF NUMBER - REMARKS</li>
+            <li class=""><span class="font-strong">By : </span> NEFT/CHEQUE/CASH - REFF NUMBER - REMARKS</li>
           </ul>
-          <h6 class="mt-3 text-center">on account of payment against the below details</h6>
+          <h6 class="mt-3 text-center font-strong">on account of payment against the below details</h6>
 
-          <table class="w-100">
-            <thead class="border border-bottom">
+          <table class="table table-borderless  w-100">
+            <thead class="border-bottom border-dark">
                 <tr>
                     <th>Invoice No.</th>
                     <th>Date</th>
@@ -128,12 +128,6 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <th>Invoice No.</th>
-                    <th>Date</th>
-                    <th>Pax Name</th>
-                    <th>Amount</th>
-                  </tr>
                   <tr>
                     <td>MUM/C/2404/00360</td>
                     <td>11/04/2024</td>
@@ -219,9 +213,9 @@
                     <td>2758.00</td>
                   </tr>
             </tbody>
-            <tfoot class="border-top">
+            <tfoot class="border-top border-dark">
                 <tr>
-                    <td colspan="3" class="text-end"><span class="font-strong">Total Amount</span></td>
+                    <td colspan="3" class="text-end"><span class="font-strong">Total Amount:</span></td>
                     <td>22851.00</td>
                 </tr>
                 <tr>
